# Self-Organization-of-Robots-in-a-Hostile-Environnement

./: .gitignore  README.md  check_start.py  main.py  pyproject.toml  run.py  test_logic.py
5_robot_mission_MAS2026/: agents.py  model.py  objects.py  server.py
5_robot_mission_MAS2026/communication/message/: MessagePerformative.py  MessageService.py
