[project]
name = "self-organization-of-robots-in-a-hostile-environnement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "matplotlib>=3.10.8",
    "mesa>=3.5.1",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "solara>=1.57.3",
]
